# analyzer-wav

./: .dockerignore  .gitignore  Dockerfile  README.md  input_variables.txt  process_audio.sh  pyproject.toml
.github/workflows/: lint_and_types.yml
ml/: cnn.ipynb
scripts/: add_noise.py  create_dataset.py  denoising.py  generate_noise.py  mel_spectorgram.py  split_wav.py  wav_to_mel.py
