[tool.poetry]
name = "wav-analyzer"
version = "0.1.0"
description = ""
authors = ["Vladimir Dimitrov <v.dimitrov@g.nsu.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
librosa = "^0.10.1"
fire = "^0.6.0"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
soundfile = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
